force-app/main/default/objects/Oktopost_User__c/Oktopost_User__c.object-meta.xml
<CustomObject>
    <label>Oktopost User</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oktopost Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>