force-app/main/default/objects/Oktopost_User__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <externalId>true</externalId>
    <label>User Id</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>